2005-02-11  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/ia64.exp: Pass -munwind-check=error for unwind-err
	and proc.

2005-02-09  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intelok.s: Remove comments disabling alternative forms of
	fbld, fbstp, and fldcw.
	* gas/i386/intelok.d: Expect two instances of fbld, fbstp, and fldcw.

2005-02-07  Inderpreet Singh <inderpreetb@noida.hcltech.com>

	* gas/maxq10/jump.d: Fixed relative jump offset.
	* gas/maxq10/call.d: Likewise.
	* gas/maxq20/jump.d: Likewise.
	* gas/maxq20/call.d: Likewise.

2005-02-07  Hans-Peter Nilsson  <hp@axis.com>

	* lib/gas-defs.exp: Support new directive "warning".

2005-02-02  Jan Beulich  <jbeulich@novell.com>

	* gas/ia64/pred-rel.s: New.
	* gas/ia64/ia64.exp: Run new test.

2005-01-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* gas/mips/elf-rel23.d, gas/mips/elf-rel23a.d: Accept little-endian.
	* gas/mips/tmipsel16-e.d, gas/mips/tmipsel16-f.d: Accept section
	symbol names.

2005-01-31  Jan Beulich  <jbeulich@novell.com>

	* gas/macros/repeat.[ds]: New.
	* gas/macros/macros.exp: Run new test.

2005-01-31  Jan Beulich  <jbeulich@novell.com>

	* gas/macros/badarg.[ls]: New.
	* gas/macros/end.[ls]: New.
	* gas/macros/redef.[ls]: New.
	* gas/macros/macros.exp (run_list_test): Copy from elsewhere.
	Run new tests.

2005-01-31  Jan Beulich  <jbeulich@novell.com>

	* gas/ia64/operands.[ls]: New.
	* gas/ia64/ia64.exp: Run new test.

2005-01-31  Jan Beulich  <jbeulich@novell.com>

	* gas/ia64/proc.[ls]: New.
	* gas/ia64/unwind-err.[ls]: New.
	* gas/ia64/ia64.exp: Run new tests.

2005-01-31  Jan Beulich  <jbeulich@novell.com>

	* gas/ia64/bundling.[ds]: New.
	* gas/ia64/label.[ls]: New.
	* gas/ia64/last.[ls]: New.
	* gas/ia64/slot2.[ls]: New.
	* gas/ia64/ia64.exp: Run new tests.

2005-01-31  Jan Beulich  <jbeulich@novell.com>

	* gas/ia64/pseudo.[ds]: New.
	* gas/ia64/ia64.exp: Run new test.

2005-01-27  Jan Beulich  <jbeulich@novell.com>

	* gas/ia64/nop_x.[ds]: New.