@@ -70,4 +70,5 @@ if [istarget "ia64-*"] then {
     run_list_test "proc" "-munwind-check=error"
     run_list_test "slot2" ""
     run_list_test "unwind-err" "-munwind-check=error"
+    run_dump_test "operand-or"
 }
