@@ -1,3 +1,10 @@
+2005-02-13  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/ia64/ia64.exp: Add "operand-or".
+
+	* gas/ia64/operand-or.d: New file.
+	* gas/ia64/operand-or.s: Likewise.
+
 2005-02-11  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gas/ia64/ia64.exp: Pass -munwind-check=error for unwind-err
